; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_input.c_MIDI_NoteOn.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_input.c_MIDI_NoteOn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@K_AUX1 = common dso_local global i32 0, align 4
@g_wv = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@SE_KEY = common dso_local global i32 0, align 4
@qtrue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @MIDI_NoteOn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @MIDI_NoteOn(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @MIDI_NoteOff(i32 %9)
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i32, i32* %3, align 4
  %13 = sub nsw i32 %12, 60
  %14 = load i32, i32* @K_AUX1, align 4
  %15 = add nsw i32 %13, %14
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp sgt i32 %16, 255
  br i1 %17, label %22, label %18

18:                                               ; preds = %11
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @K_AUX1, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %18, %11
  br label %29

23:                                               ; preds = %18
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @g_wv, i32 0, i32 0), align 4
  %25 = load i32, i32* @SE_KEY, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* @qtrue, align 4
  %28 = call i32 @Sys_QueEvent(i32 %24, i32 %25, i32 %26, i32 %27, i32 0, i32* null)
  br label %29

29:                                               ; preds = %23, %22
  ret void
}

declare dso_local i32 @MIDI_NoteOff(i32) #1

declare dso_local i32 @Sys_QueEvent(i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
